@@ -18,5 +18,7 @@ Available Bots Now:
 LICENSES:
  - All documents and codes are licensed under GPLv3
 
+
+CREDITS:
  - AIML files copyright by the A.L.I.C.E Foundation, please download them yourself if necessary with the download-aiml.sh command
    - http://www.alicebot.org/aiml/aaa/
