@@ -25,12 +25,12 @@ use Proc::PID::File;
 use Net::DBus;
 use Net::DBus::Reactor;
 use DBus::Trigger;
+use DBus::Parser;
 use SplashBox;
 use SplashBox::Job::Trigger;
+use SplashBox::Language::Parser;
 
 my $xml = new XML::Simple;
-
-
 if (defined $ARGV[0] && $ARGV[0] eq "-d")
 {
 	$ENV{USER} eq 'root' || print STDERR "You must be root to run it as a daemon.\n";
@@ -42,8 +42,9 @@ if (defined $ARGV[0] && $ARGV[0] eq "-d")
 }
 
 
-my $service = Net::DBus->session->export_service("org.opensplash.bot.job");
+my $service = Net::DBus->session->export_service("org.opensplash.bot");
 my $object = DBus::Trigger->new($service);
+my $object2 = DBus::Parser->new($service);
 my $reactor = Net::DBus::Reactor->main();
 my $timer = $reactor->add_timeout(
 	50_000,
@@ -54,6 +55,20 @@ my $timer = $reactor->add_timeout(
 		},
 	)
 );
+
+
+sub init {
+        if ( ! -e "$JOB_PATH" ) {
+                system "mkdir -p $JOB_PATH";
+        }
+        system "mkdir -p $JOB_PATH/now";
+        system "mkdir -p $JOB_PATH/later";
+        system "mkdir -p $JOB_PATH/routine";
+}
+
+
+init();
+
 
 SplashBox::Job::Trigger::check_job();
 $reactor->run();
